@@ -153,6 +153,7 @@ void nec7210_interrupt(gpib_board_t *board, nec7210_private_t *priv)
 	// output byte has been lost
 	if(status1 & HR_ERR)
 	{
+//XXX report error
 		printk("gpib output error\n");
 	}
 
