@@ -1,31 +1,31 @@
-Board Type                Interface Name           Driver Module  
-****************************************************************
+Board Type                Interface Name           Driver Module     Works?
+***************************************************************************
 
 Capital Eq. Corp.:
-  PCI-488                 cec_pci                  cec-gpib.o      
-  PC-488                  pcII                     pc2-gpib.o
+  PCI-488                 cec_pci                  cec-gpib.o          Y 
+  PC-488                  pcII                     pc2-gpib.o          ?
 
 Ines:
-  GPIB-PCI                ines_pci                 ines-gpib.o        
-  GPIB for PCMCIA         ines_pcmcia              ines-gpib.o          
+  GPIB-PCI                ines_pci                 ines-gpib.o         Y 
+  GPIB for PCMCIA         ines_pcmcia              ines-gpib.o         Y 
 
 Keithley:
-  KPCI-488                cec_pci                  cec-gpib.o
-  MBC-488                 pcII                     pc2-gpib.o
+  KPCI-488                cec_pci                  cec-gpib.o          Y
+  MBC-488                 pcII                     pc2-gpib.o          ?
 
 Measurement Computing
 (Computer Boards):
-  ISA-GPIB                cbi_isa                  cb7210.o
-  ISA-GPIB-PC2A           pcIIa                    pc2-gpib.o
-  PCI-GPIB                cbi_pci                  cb7210.o
-  PCMCIA-GPIB             cbi_pcmcia               cb7210.o
+  ISA-GPIB                cbi_isa                  cb7210.o            ?
+  ISA-GPIB-PC2A           pcIIa                    pc2-gpib.o          Y
+  PCI-GPIB                cbi_pci                  cb7210.o            Y
+  PCMCIA-GPIB             cbi_pcmcia               cb7210.o            Y
 
 National Instruments:
-  AT-GPIB                 ni_isa                   tnt4882.o
-  PCI-GPIB                ni_pci                   tnt4882.o
-  PCII                    pcII                     pc2-gpib.o
-  PCIIa                   pcIIa                    pc2-gpib.o
-  PCII/IIa              * pcII or pcIIa            pc2-gpib.o
+  AT-GPIB                 ni_isa                   tnt4882.o           ?
+  PCI-GPIB                ni_pci                   tnt4882.o           Y
+  PCII                    pcII                     pc2-gpib.o          ?
+  PCIIa                   pcIIa                    pc2-gpib.o          Y
+  PCII/IIa              * pcII or pcIIa            pc2-gpib.o          Y
 
 * depends on board switch which chooses pcII or pcIIa mode
 
